overflow issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,6 +236,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .hero .hero-slider-container .slider {
