--- a/sass/scss/themes/_hero.scss
+++ b/sass/scss/themes/_hero.scss
@@ -13,6 +13,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    overflow: hidden;
 
     .slider {
       @include keep-it-hundo;
